Fix overflow problems caused by out of proportion elements.

--- a/src/app.css
+++ b/src/app.css
@@ -9,5 +9,5 @@
 
 html,
 body {
-	@apply h-screen w-screen bg-slate-900 text-[color:var(--font-color,theme('colors.indigo.50'))];
+	@apply flex w-screen flex-col bg-slate-900 text-[color:var(--font-color,theme('colors.indigo.50'))];
 }
